feat: implement count cars in garage

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -19,8 +19,12 @@ body {
   padding: 0 10px;
 }
 
-h1 {
-  margin: 10px 0;
+.garage__title {
+  margin: 50px 0 0;
+}
+
+.garage__page {
+  margin: 20px 0;
 }
 
 .container-forms {
