--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
-@import 'scss/global';
-@import 'scss/header';
-@import './scss/components/buttons';
-@import './scss/components/form';
+@import 'scss/_global';
+@import 'scss/_header';
+@import './scss/components/_buttons';
+@import './scss/components/_form';
 @import "scss/components/_garage.css";
+@import './scss/components/_winners.css';
