--- a/src/scss/components/_winners.css
+++ b/src/scss/components/_winners.css
@@ -1,4 +1,5 @@
 table {
+  max-width: 900px;
   border-collapse: collapse;
   margin: 20px 0;
 }
@@ -15,11 +16,9 @@ th {
   cursor: pointer;
 }
 
-.winners {
-
-}
-
 td {
+  font-size: 15px;
+  text-align: center;
   padding: 5px 20px;
 }
 
