--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -36,8 +36,9 @@ body {
   font-family: "Arial Narrow", sans-serif;
   letter-spacing: 2px;
   font-size: 30px;
-  color: #171717;
-  text-shadow: 0 -1px 4px #000, 0 -5px 8px #f80850, 0 -5px 8px #f8081c, 0 18px 40px #8d3c3c;
+  color: #ff0015;
+  font-weight: 800;
+  text-shadow: 0 -1px 4px #000000, 0 -5px 8px #000000, 0 -5px 8px #111111, 0 18px 40px #090808;
 }
 
 .hidden{
