--- a/src/scss/components/_garage.css
+++ b/src/scss/components/_garage.css
@@ -33,6 +33,7 @@ ul {
 }
 
 .car__name {
+  color: rgba(0, 255, 20, 0.9);
   font-weight: 700;
   margin-left: 5px;
   font-size: 20px;
@@ -51,4 +52,11 @@ ul {
   background-image: url("../../assets/svg/flag.svg");
   background-size: 100% 100%;
   transform: scale(2);
+}
+
+.message-broke {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
